# watson-rfdiffusion-2023-gaia

./: .gitignore  ANALYSIS.md  README.md  manifest.json  pyproject.toml
.gaia/: ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
.github-output/: README.md  manifest.json  narrative-outline.md
.github-output/docs/public/assets/: paper.md
.github-output/docs/public/data/: beliefs.json  graph.json  meta.json
.github-output/docs/public/data/sections/: s2_method.md  s2_model.md  s3_downfolding.md  s5_eph_coupling.md  (+4 more)
.github-output/docs/src/: App.tsx
.github-output/docs/src/__tests__/: App.test.tsx
.github-output/wiki/: Home.md  Inference-Results.md  Module-Root.md  Module-motivation.md  Module-s2-method.md  Module-s3-unconditional.md  Module-s4-oligomers.md  Module-s5-motif-scaffolding.md  Module-s6-symmetric-motif.md  Module-s7-binder-design.md  Module-s8-discussion.md
.github/workflows/: pages.yml
docs/: detailed-reasoning.md
docs/public/data/: beliefs.json
docs/public/data/sections/: motivation.md  s3_unconditional.md  s4_oligomers.md  s4_pseudopotential.md  s8_discussion.md
docs/src/: App.tsx
docs/src/components/: KnowledgeGraph.tsx
src/watson_rfdiffusion_2023/: __init__.py  motivation.py  s2_method.py  s3_unconditional.py  s4_oligomers.py  s5_motif_scaffolding.py  s6_symmetric_motif.py  s7_binder_design.py  s8_discussion.py
src/watson_rfdiffusion_2023/reviews/: self_review.py
wiki/: Home.md  Inference-Results.md  Module-s5-motif-scaffolding.md  Module-s6-symmetric-motif.md  Module-s7-binder-design.md
